fixes some alignment issues

--- a/src/css/components/_modals.scss
+++ b/src/css/components/_modals.scss
@@ -381,4 +381,8 @@
       }
     }
   }
+  .vertical-align-row {
+    display: flex;
+    align-items: center;
+  }
 }
