--- a/src/user/dashboard/news-feed/news-feed.scss
+++ b/src/user/dashboard/news-feed/news-feed.scss
@@ -4,6 +4,7 @@
     height: 50px;
     .article {
       display: flex;
+      align-items: center;
       form {
         flex: 1;
         border: none;
